Refactor and update code for improved readability and consistency